--- a/tests/mocks/1-2.md
+++ b/tests/mocks/1-2.md
@@ -6,8 +6,8 @@
 
 | Contract | Method | Avg (+/-) | % |
 |:-|:-|-:|-:|
-| **Morpho** | _borrow(address,uint256)_<br />_claimToTreasury_<br />_defaultMaxGasForMatching_<br />_enteredMarkets_<br />_liquidate_<br />_marketStatus_<br />_p2pBorrowIndex_<br />_p2pSupplyIndex_<br />_repay(address,address,uint256)_<br />_repay(address,uint256)_<br />_setDefaultMaxGasForMatching_<br />_setP2PIndexCursor_<br />_supply(address,address,uint256,uint256)_<br />_supply(address,uint256)_<br />_supplyBalanceInOf_<br />_updateP2PIndexes_<br />_withdraw(address,uint256)_ | -43,939 ✅<br />+3,963 ❌<br />-67 ✅<br />+22 ❌<br />-69,325 ✅<br />+622 ❌<br />+18 ❌<br />+18 ❌<br />-2,020 ✅<br />-22,934 ✅<br />-872 ✅<br />+25,350 ❌<br />+402,561 ❌<br />-22,356 ✅<br />+35 ❌<br />-2,300 ✅<br />-15,968 ✅ | **-7.91%**<br />**+46.86%**<br />**-10.55%**<br />**+2.71%**<br />**-21.50%**<br />**+53.99%**<br />**+2.62%**<br />**+2.60%**<br />**-3.39%**<br />**-8.94%**<br />**-10.08%**<br />**+512.43%**<br />**+2898.00%**<br />**-6.03%**<br />**+3.05%**<br />**-9.16%**<br />**-6.02%** |
-| **PositionsManager** | _borrowLogic_<br />_liquidateLogic_<br />_repayLogic_<br />_supplyLogic_<br />_withdrawLogic_ | -39,042 ✅<br />-82,027 ✅<br />-25,060 ✅<br />-21,036 ✅<br />-20,058 ✅ | **-7.20%**<br />**-24.90%**<br />**-10.26%**<br />**-5.76%**<br />**-7.57%** |
+| **Morpho** | _claimToTreasury_<br />_defaultMaxGasForMatching_<br />_liquidate_<br />_marketStatus_<br />_repay(address,uint256)_<br />_setDefaultMaxGasForMatching_<br />_setP2PIndexCursor_<br />_supply(address,address,uint256,uint256)_<br />_updateP2PIndexes_ | +3,963 ❌<br />-67 ✅<br />-69,325 ✅<br />+622 ❌<br />-22,934 ✅<br />-872 ✅<br />+25,350 ❌<br />+402,561 ❌<br />-2,300 ✅ | **+46.86%**<br />**-10.55%**<br />**-21.50%**<br />**+53.99%**<br />**-8.94%**<br />**-10.08%**<br />**+512.43%**<br />**+2898.00%**<br />**-9.16%** |
+| **PositionsManager** | _liquidateLogic_<br />_repayLogic_ | -82,027 ✅<br />-25,060 ✅ | **-24.90%**<br />**-10.26%** |
 | **InterestRatesManager** | _updateP2PIndexes_ | -3,004 ✅ | **-11.05%** |
 ---
 
